--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-typed": "^2.0.12",
     "redux": "^5.0.1",
     "tailwindcss": "^3.4.4"
   },
